# idfw

./: .env  .gitignore  .linear.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIALIZATION_COMPLETE.md  LICENSE  PHASE1_DELIVERABLES_SUMMARY.md  PHASE1_TASKS.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  Pipfile  README.4.2.DIAG.wsd  README.8.2.DIAG.puml  README.md  STATUS_REPORT.md  custom_steps_guide.md  dev_sentinel  flow_updated.md  flow_updated.puml  idfw_original  iteration_metrics.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: orchestration.yaml
.claude/commands/: ccem.md  formation.md
.claude/hooks/: post_tool_use.sh  pre_tool_use.sh  session_init.sh
.claude/scripts/: init-project.sh
.claude/slash-commands/: agent-status.md  agent-sync.md  autofix.md  create-linear-epic.md  create-state-manager.md  deploy-agent-team.md  deploy-monitoring.md  document-api.md  fix-schema-conflicts.md  implement-schema-bridge.md  implement-unified-cli.md  index.md  setup-mcp-server.md  setup-testing-framework.md  update-project-status.md  watch-deployment.md  wrap-idfw-generators.md
.force/: README.md
.force/checkpoints/: cp-wave1-1771528429.json
.force/constraints/: development-constraints.json  docker-requirement-for-functions.json  supabase-cli-linked-constraint.json  supabase-deployment.json  supabase-project-access-constraint.json
.force/governance/: system-governance.json
.force/patterns/: atomic_commit_grouping.json  atomic_commit_workflow.json  branch_task_end_tasks.json  continuous_changelog_pattern.json  documentation-patterns.json  grouped_commit_workflow.json  handoff_documentation_pattern.json  iterative_enhancement_workflow.json  mcp_integration_pattern.json  schema_evolution_pattern.json  supabase-web-deployment.json
.force/tools/: analyze-code-changes.json  check-release-readiness.json  code-quality-check.json  code_quality_check.json  compliance-check.json  dependency-analysis.json  docs-analysis.json  docs-extraction.json  docs-validation.json  documentation_analysis.json  force_schema_manager.json  force_sync.json  generate-docs-update-summary.json  generate-review-feedback.json  git-commit.json  git-diff.json  git-status.json  git_branch_create.json  git_workflow_commit.json  handoff_documentation_pattern.json  infrastructure-security-check.json  performance-analysis.json  project-structure-analysis.json  project_structure_analysis.json  readme-analysis.json  security-analysis.json  security-configuration-check.json  static-analysis.json  update-api-docs.json  update-release-documentation.json  validate-version.json  versioned_project_management.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.linear/issue-templates/: README.md  agent-task.md  bug-report.md  command-task.md  schema-task.md  testing-task.md
IDFWU/: .gitignore  FEATURE-provider-cli-builder.md  Package.swift
IDFWU/Scripts/: bundle-daemon.sh
apm/: apm_config.json
force/: __init__.py
idea-framework/: phase_skill_mapping.json  skills_index.json
idea-framework-updated/data/: diagrams.seed.json  idfpj.seed.expanded.json  idfpj.seed.json  other.seed.json
idea-framework-updated/docs/: DDD.md  IDDC.md  IDDG.md  IDFPJ.md  IDFPJs.md  IDPG.md  SDREF.md
idea-framework-updated/schemas/: DDD.schema.jsonc  IDDC.schema.json  IDDC.schema.jsonc  IDDG.schema.jsonc  IDDV.schemas.json  IDFW.schema copy.jsonc  IDPC.schema.jsonc  IDPG.schema.json  resume.schema.json
idea-framework/data/: assets.seed.json  documents.seed.json  idfpj.seed.expanded.json  idfpj.seed.json  other.seed.json
idea-framework/docs/: ICDMD.md  IDAA.md  IDEA_Complete_Reference.md  IDFW_MasterSpec.md  IDPC.md
idea-framework/schemas/: DDD.schema.jsonc  IDDA.schemas.json  IDDG.schema.json  IDDV.schemas.json  IDFPJ.schema.jsonc  IDFW.schema-spec.jsonc  IDFW.schema.json  IDPC.schema.json  IDPG.schema.jsonc  resume.schema.json
planning/: ANALYSIS-SUMMARY.txt  SQ-08-INDEX.md  SQ-08-SKILLS-IMPLEMENTATION-REPORT.md  comprehensive_skills_catalog.md  framework_skills_architecture_detailed.html  sq08-skills-mapping.json  vanguart.md
tests/: test_dev_sentinel.py  test_force_system.py  test_idea_lifecycle.py
unified_framework/: __init__.py  config.yaml  linear_agent_integration.py  linear_integration.py  main.py
unified_framework/agents/: __init__.py  base_agent.py  orchestrator_agent.py
unified_framework/cli/: __init__.py  orchestrator_cli.py
unified_framework/commands/: __init__.py  processor.py
unified_framework/core/: __init__.py  converters.py  force_parser.py  message_protocols.py  result_aggregator.py  schema_bridge.py  state_manager.py
unified_framework/discovery/: __init__.py  api.py  models.py  provider.py  resolver.py
unified_framework/hooks/: README.md  __init__.py  config.py  converters.py  core.py  integrations.py  link_catalog.py  memory_manager.py  pattern_extractor.py  posthook.py  prehook.py  security.py  vector_rag.py
unified_framework/mcp/: __init__.py  server.py
unified_framework/monitoring/: __init__.py  dashboard.py  hook_telemetry.py
unified_framework/services/: __init__.py  apm_client.py  checkpoint_manager.py  orchestrator_init.py  orchestrator_launcher.py  orchestrator_service.py
unified_framework/tests/: TESTING_PLAN.md  test_hooks_basic.py  test_hooks_system.py  test_main.py
unified_framework_docs/: 00_EXECUTIVE_SUMMARY.md  INTEGRATION_COMPLETE.md  LINEAR_INTEGRATION.md  README.md  mermaid-plantuml-architecture-reference.md
unified_framework_docs/01_ARCHITECTURE_OVERVIEW/: DevSentinel_Analysis.md  IDFW_Analysis.md  Integration_Points.md  Unified_Architecture.md
unified_framework_docs/02_SCHEMA_MAPPINGS/: Unified_Schema_Design.md
unified_framework_docs/03_COMMAND_SYSTEMS/: IDFW_Actions.md  Unified_Commands.md  YUNG_Commands.md
unified_framework_docs/04_AGENT_INTEGRATION/: Agent_Wrappers.md  Message_Bus_Integration.md
wiki/: .gitignore  README.md  mix.exs
(+265 files in other folders)
