[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idfw"
version = "4.0.0"
description = "IDFW - IDEA Definition Framework: Unified schema, agent orchestration, FORCE governance, and MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jeremiah Pegues"}
]
keywords = ["idfw", "idea-framework", "dev-sentinel", "agent-orchestration", "mcp", "force"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "msgpack>=1.0.7",
    "websockets>=12.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",
    "mcp>=1.6.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.4.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.31.0.20240106",
]
linear = [
    "gql[all]>=3.5.0",
]
agents = [
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "gitpython>=3.1.30",
    "fast-agent-mcp",
    "mcp-agent",
    "pygments>=2.15.0",
    "jinja2>=3.1.2",
    "diagrams>=0.23.3",
    "plantuml>=0.3.0",
    "pylint>=2.17.0",
    "ujson>=5.8.0",
    "tqdm>=4.65.0",
    "terminaltables>=3.1.0",
    "markdown>=3.4.0",
    "colorama>=0.4.6",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/peguesj/idfw"
Repository = "https://github.com/peguesj/idfw.git"

[project.scripts]
idfw = "unified_framework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["unified_framework*", "force*", "agents*", "core*", "dev_sentinel*", "integration*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["unified_framework/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
branch = true
source = ["unified_framework", "force", "agents"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
strict_equality = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
